
public abstract class CharacterBehaviour
{
    public abstract bool Check();
    public virtual void SetParameters()
    {}
    public abstract void Execute();
}